--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<strong>hallo</strong>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Page Title</title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <p>Hello, world!</p>
+  </body>
+</html>
