--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
       We believe there are <strong>at least a billion people</strong> who can benefit from
       learning technical sophistication, probably more. To join our
       movement, sign up for our official email<a href="http://learnenough.com/email">sign up for our official email list</a> list now.
+
     </p>
+
+    <p>
+     <a href="http://twitter.com/learnenough" target="_blank"
+     style="text-decoration: none;">
+       <img src="small_twitter_logo.png"alt="small twitter logo">
+     </a>
+     You should follow Learn Enough on Twitter
+     <a href="http://twitter.com/learnenough" target="_blank">here</a>.
+   </p>
     <p>
       HTML was created by the original "web developer", computer scientist
       <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim
