--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
   </head>
   <body>
 
-    <div>
-      <a href="index.html">Home</a>
-      <a href="moby_dick.html">Moby Dick</a>
-      <a href="tags.html">HTML Tags</a>
-    </div>
+    <div style="text-align: right;">
+   <a href="index.html">Home</a>
+   <a href="tags.html" style="margin: 0 0 0 10px;">HTML Tags</a>
+   <a href="moby_dick.html" style="margin: 0 0 0 10px;">Moby Dick</a>
+ </div>
 <h1> The Learn Enough Story</h1>
+
+
 
 <p>
       Learn Enough to Be Dangerous is a leader in the movement to teach
@@ -39,7 +41,22 @@
       Berners-Lee</a>. It's not true that Sir Tim invented HTML in order to
       share pictures of his cat, but it would be cool if it were.
     </p>
+
+
     <img src="kitten.jpg" alt="An adorable kitten">
+
+    <h2>Quotations</h2>
+    <p>
+      In addition to hosting most of the world's supply of kitten videos, the
+      Web is also full of inspiring quotes, perhaps none more so than this one:
+    </p>
+    <p>
+        <em>Don't believe every quote you read on the Internet.</em>
+        <br>
+        —Abraham Lincoln
+      </p>
+    </blockquote>
+
 
 
 <h2>Background</h2>
